@@ -1,3 +1,7 @@
+2004-03-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+     * vtk/vtkGdcmReader.cxx : bug fix when loading a list of files using the
+       file pattern (SetFilePattern)
+
 2004-05-02  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * Add a new test: ShowDicom, for now this is just the c++ version of
        checkRead.sh, later it will be able to compare the image read against a
